--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infineezsolutions</title>
+    <title>Infineez Solutions</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
@@ -11,7 +11,8 @@
     <header>
         <img src="topleft.png" alt="Left Logo" class="logo left-logo">
         <nav>
-                <ul class="menu">
+            
+            <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="academics.html">Academics</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -42,7 +43,7 @@
             <br>
             <br>
             <div class="form-Container">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdACEdJ-GgwWIZyAZrbj3V9t0tGdsNxQ2qiCS94PW4MRFD4qA/viewform?embedded=true" width="1000" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdACEdJ-GgwWIZyAZrbj3V9t0tGdsNxQ2qiCS94PW4MRFD4qA/viewform?embedded=true" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
 
     </main>
