--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 <body>
     <header>
         <img src="topleft.png" alt="Left Logo" class="logo left-logo">
+        <div class="hamburger" id="hamburger-icon">
+            &#9776;
+        </div>
         <nav>
             
-            <ul class="menu">
+            <ul class="menu" id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="academics.html">Academics</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <img src="topright.png" alt="Right Logo" class="logo right-logo">
+        
     </header>
 
     <main>
